  cgen's wsdl subcommand
  (kiesel)
- Changed HttpSession to regenerate session ID before starting a session
  in order to prevent duplicate session creation
  (friebe)
- Ports: Fixed protocol messup when reading messages without content length 
  from STOMP endpoints.
  (friebe)
- Removed unused member field xml.Tree::$dataSource
  (hinckel)

Features
~~~~~~~~
- Added support for alternative syntax in web.ini's [app] section
  (kiesel)
- Ports: Added support for selectors to StompConnection::subscribe()
  (friebe)
- Ports: Added optional headers parameter to StompConnection::send()
  (friebe)
- Added support for rewriting {PROFILE} literals in web.ini
  (kiesel)


Version 5.7.9, released 2010-05-05
----------------------------------
SVN version: 14546

Heads up!
~~~~~~~~~
- Ports: Deprecated com.google.soap.search package, it's been discontinued 
  by Google
  (friebe)

RFCs
~~~~
- Implemented RFC #0201 - XP Overlays
  (friebe)

Bugfixes
~~~~~~~~
- Fixed lang.reflect.Proxy class to not produce fatal errors when passed
  an empty array of interfaces to implement
  (friebe)
- Fixed common stack trace element calculation in lang.ChainedException
  if chained exception is a chained exception itself.
  (friebe)
- Fixed peer.ftp.FtpConnection to be able to cope with FTP servers
  sending an empty directory listing (without "." and "..") for 
  nonexistant directories
  (friebe)
- Fixed format string BIT_AND operator to only use one placeholder
  (hinckel)

Features
~~~~~~~~
- Allowed changing contenttype to use others than multipart/mixed in
  peer.mail.MimeMessage
  (gellweiler)
- Refactored class loader implementations and extracted common code in
  all three implementations into an abstract base class
  (friebe)
- Ports: Added package org.codehaus.stomp
  (kiesel)
- Introduced new class loading exceptions, lang.ClassDependencyException 
  and lang.ClassLinkageException which inherit the existing 
  lang.ClassNotFoundException class.
  (kiesel)